Report in progress
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/report/CUCitations.bib
+++ b/report/CUCitations.bib
@@ -1196,72 +1196,103 @@
 }
 
 @misc{Burnette2010,
-  author = {Heyward Burnette},
-  title = {Lab Demonstrates Robotic Ground Refueling of Aircraft},
-  url = {https://www.wpafb.af.mil/News/Article-Display/Article/400022/lab-demonstrates-robotic-ground-refueling-of-aircraft/},
-  year = {2010},
-  month = oct,
-  note = {Accessed: 2024-06-24},
-  organization = {Materials and Manufacturing, Wright-Patterson Air Force Base}
+  author       = {Heyward Burnette},
+  month        = oct,
+  note         = {Accessed: 2024-06-24},
+  organization = {Materials and Manufacturing, Wright-Patterson Air Force Base},
+  title        = {Lab Demonstrates Robotic Ground Refueling of Aircraft},
+  url          = {https://www.wpafb.af.mil/News/Article-Display/Article/400022/lab-demonstrates-robotic-ground-refueling-of-aircraft/},
+  year         = {2010}
 }
 
 @misc{Ficken2017,
-  author = {Nikki Ficken},
-  title = {Concept Demonstration Explores Robotic Aviation Refueling System},
-  year = {2017},
-  month = {July 18},
+  author    = {Nikki Ficken},
+  month     = {July 18},
+  note      = {Accessed: 2024-06-24},
   publisher = {AMRDEC Public Affairs},
-  url = {https://www.army.mil/article/190980/concept_demonstration_explores_robotic_aviation_refueling_system},
-  note = {Accessed: 2024-06-24}
+  title     = {Concept Demonstration Explores Robotic Aviation Refueling System},
+  url       = {https://www.army.mil/article/190980/concept_demonstration_explores_robotic_aviation_refueling_system},
+  year      = {2017}
 }
 
 @misc{AR3P2020,
-    title = {AR3P Program Background (2017-2019) and Robotic Hot Refueling Demonstrations (Sep-Oct 2020)},
-    author = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
-    year = {2020},
-    note = {Accessed: 2024-06-24},
-    organization = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
-    url = {hhttps://www.denix.osd.mil/ndcee/denix-files/sites/44/2023/09/EXSUM-AR3P-Robotic-Refueling-K-MAX-and-S-70-Sep_Oct-2020-v9.pdf},
-    abstract = {The Autonomous & Robotic Remote Refuel Point (AR3P) is a science \& technology (S\&T) program previously executed by the Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC). Funding sources include the OSD Coalition Warfare Program (US-UK), OSD Operational Energy Capability Improvement Fund (OECIF), DoD Rapid Innovation Fund (RIF), and Small Business Innovation Research. The AR3P system was demonstrated during the Maneuver Support, Sustainment, and Protection Integration Exercise (MSSPIX) at Fort Pickett VA in Sep 2020, focusing on autonomous refueling of a tactical helicopter.}
+  abstract     = {The Autonomous & Robotic Remote Refuel Point (AR3P) is a science \& technology (S\&T) program previously executed by the Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC). Funding sources include the OSD Coalition Warfare Program (US-UK), OSD Operational Energy Capability Improvement Fund (OECIF), DoD Rapid Innovation Fund (RIF), and Small Business Innovation Research. The AR3P system was demonstrated during the Maneuver Support, Sustainment, and Protection Integration Exercise (MSSPIX) at Fort Pickett VA in Sep 2020, focusing on autonomous refueling of a tactical helicopter.},
+  author       = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
+  note         = {Accessed: 2024-06-24},
+  organization = {Army Futures Command (AFC) CCDC Aviation \& Missile Center (AvMC)},
+  title        = {AR3P Program Background (2017-2019) and Robotic Hot Refueling Demonstrations (Sep-Oct 2020)},
+  url          = {hhttps://www.denix.osd.mil/ndcee/denix-files/sites/44/2023/09/EXSUM-AR3P-Robotic-Refueling-K-MAX-and-S-70-Sep_Oct-2020-v9.pdf},
+  year         = {2020}
 }
 
 @misc{IntelRealSense,
   author = {Intel},
-  title = {Intel RealSense Depth Camera D435},
-  url = {https://www.intelrealsense.com/depth-camera-d435/},
-  year = {2024},
-  note = {Accessed: 2024-06-24}
-
+  note   = {Accessed: 2024-06-24},
+  title  = {Intel RealSense Depth Camera D435},
+  url    = {https://www.intelrealsense.com/depth-camera-d435/},
+  year   = {2024}
 }
 
 @misc{ImageRefueling,
   author = {Joanna Bailey},
-  title = {What Is Fuel Tankering And Why Should You Care?}, 
-  url = {https://simpleflying.com/fuel-tankering/},
-  year = {2019},
-  note = {Accessed: 2024-06-24}
+  note   = {Accessed: 2024-06-24},
+  title  = {What Is Fuel Tankering And Why Should You Care?},
+  url    = {https://simpleflying.com/fuel-tankering/},
+  year   = {2019}
 }
 
 @misc{LearnOpenCVYOLOv10,
   author = {Ankan Ghosh},
-  title = {YOLOv10: The Dual-Head OG of YOLO Series},
-  url = {https://learnopencv.com/yolov10/},
-  year = {2024},
-  note = {Accessed: 2024-06-24}
+  note   = {Accessed: 2024-06-24},
+  title  = {YOLOv10: The Dual-Head OG of YOLO Series},
+  url    = {https://learnopencv.com/yolov10/},
+  year   = {2024}
 }
 
 @article{DBLP:journals/corr/abs-2010-10270,
-  author       = {Smail Ait Bouhsain and
-                  Saeed Saadatnejad and
-                  Alexandre Alahi},
-  title        = {Pedestrian Intention Prediction: {A} Multi-task Perspective},
-  journal      = {CoRR},
-  volume       = {abs/2010.10270},
-  year         = {2020},
-  url          = {https://arxiv.org/abs/2010.10270},
-  eprinttype    = {arXiv},
-  eprint       = {2010.10270},
-  timestamp    = {Mon, 26 Oct 2020 15:39:44 +0100},
-  biburl       = {https://dblp.org/rec/journals/corr/abs-2010-10270.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
+  author     = {Smail Ait Bouhsain and
+                Saeed Saadatnejad and
+                Alexandre Alahi},
+  bibsource  = {dblp computer science bibliography, https://dblp.org},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-2010-10270.bib},
+  eprint     = {2010.10270},
+  eprinttype = {arXiv},
+  journal    = {CoRR},
+  timestamp  = {Mon, 26 Oct 2020 15:39:44 +0100},
+  title      = {Pedestrian Intention Prediction: {A} Multi-task Perspective},
+  url        = {https://arxiv.org/abs/2010.10270},
+  volume     = {abs/2010.10270},
+  year       = {2020}
+}
+
+@software{Falcon_PyTorch_Lightning_2019,
+  author  = {Falcon, William and {The PyTorch Lightning team}},
+  doi     = {10.5281/zenodo.3828935},
+  license = {Apache-2.0},
+  month   = mar,
+  title   = {{PyTorch Lightning}},
+  url     = {https://github.com/Lightning-AI/lightning},
+  version = {1.4},
+  year    = {2019}
+}
+
+@inproceedings{Ansel_PyTorch_2_Faster_2024,
+  author    = {Ansel, Jason and Yang, Edward and He, Horace and Gimelshein, Natalia and Jain, Animesh and Voznesensky, Michael and Bao, Bin and Bell, Peter and Berard, David and Burovski, Evgeni and Chauhan, Geeta and Chourdia, Anjali and Constable, Will and Desmaison, Alban and DeVito, Zachary and Ellison, Elias and Feng, Will and Gong, Jiong and Gschwind, Michael and Hirsh, Brian and Huang, Sherlock and Kalambarkar, Kshiteej and Kirsch, Laurent and Lazos, Michael and Lezcano, Mario and Liang, Yanbo and Liang, Jason and Lu, Yinghai and Luk, CK and Maher, Bert and Pan, Yunjie and Puhrsch, Christian and Reso, Matthias and Saroufim, Mark and Siraichi, Marcos Yukio and Suk, Helen and Suo, Michael and Tillet, Phil and Wang, Eikan and Wang, Xiaodong and Wen, William and Zhang, Shunting and Zhao, Xu and Zhou, Keren and Zou, Richard and Mathews, Ajit and Chanan, Gregory and Wu, Peng and Chintala, Soumith},
+  booktitle = {29th ACM International Conference on Architectural Support for Programming Languages and Operating Systems, Volume 2 (ASPLOS '24)},
+  doi       = {10.1145/3620665.3640366},
+  month     = apr,
+  publisher = {ACM},
+  title     = {{PyTorch 2: Faster Machine Learning Through Dynamic Python Bytecode Transformation and Graph Compilation}},
+  url       = {https://pytorch.org/assets/pytorch2-2.pdf},
+  year      = {2024}
+}
+
+@software{Jocher_Ultralytics_YOLO_2023,
+author = {Jocher, Glenn and Chaurasia, Ayush and Qiu, Jing},
+license = {AGPL-3.0},
+month = jan,
+title = {{Ultralytics YOLO}},
+url = {https://github.com/ultralytics/ultralytics},
+version = {8.0.0},
+year = {2023}
 }
