Report in progress
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/report/CUCitations.bib
+++ b/report/CUCitations.bib
@@ -360,7 +360,7 @@
   volume   = {2022},
   year     = {2022}
 }
-@inproceedings{MultipleObjectForecasting,
+@misc{MultipleObjectForecasting,
   abstract = {This paper introduces the problem of multiple object forecasting (MOF), in which the goal is to predict future bounding boxes of tracked objects. In contrast to existing works on object trajectory forecasting which primarily consider the problem from a birds-eye perspective, we formulate the problem from an object-level perspective and call for the prediction of full object bounding boxes, rather than trajectories alone. Towards solving this task, we introduce the Citywalks dataset, which consists of over 200k high-resolution video frames. Citywalks comprises of footage recorded in 21 cities from 10 European countries in a variety of weather conditions and over 3.5k unique pedestrian trajectories. For evaluation, we adapt existing trajectory forecasting methods for MOF and confirm cross-dataset generalizability on the MOT-17 dataset without fine-tuning. Finally, we present STED, a novel encoder-decoder architecture for MOF. STED combines visual and temporal features to model both object-motion and ego-motion, and outperforms existing approaches for MOF. Code dataset link: https://github.com/olly-styles/Multiple-Object-Forecasting.},
   author   = {Olly Styles and Tanaya Guha and Victor Sanchez},
   doi      = {10.1109/WACV45572.2020.9093446},
