--- a/code/data_utils/synthetic_data_generation.ipynb
+++ b/code/data_utils/synthetic_data_generation.ipynb
@@ -30,19 +30,18 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "\n",
-    "def generate_background_image(width, height, num_shapes, shape_size):\n",
+    "def generate_background_image(width: int, height: int, num_shapes: int, shape_size: int) -> np.ndarray:\n",
     "    \"\"\"\n",
-    "    Generate a simple background image with random shapes.\n",
+    "    Generates a background image with randomly placed colored rectangles.\n",
     "\n",
-    "    Parameters:\n",
-    "    width (int): Width of the background image\n",
-    "    height (int): Height of the background image\n",
-    "    num_shapes (int): Number of shapes to draw\n",
-    "    shape_size (int): Size of each shape\n",
+    "    Args:\n",
+    "        width (int): The width of the generated image.\n",
+    "        height (int): The height of the generated image.\n",
+    "        num_shapes (int): The number of rectangles to draw on the background.\n",
+    "        shape_size (int): The size of each rectangle.\n",
     "\n",
     "    Returns:\n",
-    "    img (numpy array): Background image\n",
+    "        np.ndarray: The generated image with randomly placed colored rectangles.\n",
     "    \"\"\"\n",
     "    img = np.zeros((height, width, 3), dtype=np.uint8)  # Initialize black background\n",
     "\n",
@@ -94,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Camera intrinsic matrix\n",
+    "### Define Camera intrinsic matrix\n",
     "\n",
     "1. Setting Up the Camera Projection\n",
     "   First, define the parameters for the camera:\n",
@@ -121,25 +120,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to project 3D points to 2D\n",
-    "def project_points(points, K, R, T):\n",
-    "    \"\"\"\n",
-    "    Project 3D points to 2D using the pinhole camera model.\n",
+    "import numpy as np\n",
     "\n",
-    "    Parameters:\n",
-    "        points: Nx3 array of 3D points\n",
-    "        K: Intrinsic matrix\n",
-    "        R: Rotation matrix\n",
-    "        T: Translation vector\n",
+    "def project_points(points: np.ndarray, K: np.ndarray, R: np.ndarray, T: np.ndarray) -> np.ndarray:\n",
     "    \"\"\"\n",
+    "    Projects 3D points onto a 2D plane using a given camera matrix, rotation matrix, and translation vector.\n",
+    "\n",
+    "    Args:\n",
+    "        points (np.ndarray): Array of 3D points of shape (N, 3), where N is the number of points.\n",
+    "        K (np.ndarray): Camera intrinsic matrix of shape (3, 3).\n",
+    "        R (np.ndarray): Rotation matrix of shape (3, 3).\n",
+    "        T (np.ndarray): Translation vector of shape (3,).\n",
+    "\n",
+    "    Returns:\n",
+    "        np.ndarray: Array of 2D projected points of shape (N, 2).\n",
+    "    \"\"\"\n",
+    "    # Convert points to homogeneous coordinates by adding a column of ones\n",
     "    points_homogeneous = np.hstack((points, np.ones((points.shape[0], 1))))\n",
+    "    \n",
+    "    # Compute the projection matrix by multiplying the intrinsic matrix with [R | T]\n",
     "    projection_matrix = K @ np.hstack((R, T.reshape(-1, 1)))\n",
+    "    \n",
+    "    # Project the 3D points to 2D by multiplying with the projection matrix\n",
     "    points_2d_homogeneous = points_homogeneous @ projection_matrix.T\n",
+    "    \n",
+    "    # Normalize by dividing by the last (homogeneous) coordinate\n",
     "    points_2d = points_2d_homogeneous[:, :2] / points_2d_homogeneous[:, 2, np.newaxis]\n",
+    "    \n",
     "    return points_2d"
    ]
   },
@@ -165,14 +176,6 @@
     "\n",
     "# Function to generate 3D linear motion dataset\n",
     "def generate_3d_linear_motion_dataset(num_frames, bg_img, output_dir):\n",
-    "    \"\"\"\n",
-    "    Generate a synthetic dataset with 3D linear motion.\n",
-    "\n",
-    "    Parameters:\n",
-    "        num_frames (int): Number of frames to generate\n",
-    "        bg_img (str): Path to the background image\n",
-    "        output_dir (str): Output directory to save the frames and annotations\n",
-    "    \"\"\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "    # Rotation (identity matrix, no rotation for simplicity)\n",
@@ -264,20 +267,6 @@
     "    frame_size,\n",
     "    scale_factor,\n",
     "):\n",
-    "    \"\"\"\n",
-    "    Process a single frame by projecting 3D points into 2D and saving the image with a bounding box.\n",
-    "\n",
-    "    Paramètres :\n",
-    "        frame_num: Frame number\n",
-    "        T_initial: Initial translation vector\n",
-    "        base_size: Base size of the bounding box\n",
-    "        bg_img: Path to background image\n",
-    "        output_dir: Directory for saving frames\n",
-    "        z_min: Minimum value authorised for the camera's z coordinate\n",
-    "        z_max: Maximum authorised value for the camera's z coordinate\n",
-    "        frame_size : Size of the video frame\n",
-    "        scale_factor: Scaling factor to slow down movement\n",
-    "    \"\"\"\n",
     "    try:\n",
     "        # Rotation (identity matrix, no rotation for simplicity)\n",
     "        R = np.eye(3)\n",
@@ -360,18 +349,6 @@
     "    frame_size=(640, 480),\n",
     "    scale_factor=0.01,\n",
     "):\n",
-    "    \"\"\"\n",
-    "    Generate a synthetic dataset with 3D non-linear motion.\n",
-    "\n",
-    "    Paramètres:\n",
-    "        num_frames (int): Frames number\n",
-    "        bg_img (str): Path to background image\n",
-    "        output_dir (str): Path to output folder\n",
-    "        z_min (int, optional): Minimum value authorised for the camera's z coordinate. Defaults to 100.\n",
-    "        z_max (int, optional): Maximum authorised value for the camera's z coordinate. Defaults to 1000.\n",
-    "        frame_size (tuple, optional): Size of the video frame. Defaults to (640, 480).\n",
-    "        scale_factor (float, optional): Scaling factor to slow down movement. Defaults to 0.01.\n",
-    "    \"\"\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "    #  Initial translation (initial distance from the camera)\n",
@@ -433,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
