Comments in progress
Signed-off-by: Alexis Balayre <60859013+AlexisBal@users.noreply.github.com>

--- a/code/data_utils/synthetic_data_generation.ipynb
+++ b/code/data_utils/synthetic_data_generation.ipynb
@@ -30,7 +30,10 @@
     "import cv2\n",
     "import numpy as np\n",
     "\n",
-    "def generate_background_image(width: int, height: int, num_shapes: int, shape_size: int) -> np.ndarray:\n",
+    "\n",
+    "def generate_background_image(\n",
+    "    width: int, height: int, num_shapes: int, shape_size: int\n",
+    ") -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Generates a background image with randomly placed colored rectangles.\n",
     "\n",
@@ -126,7 +129,10 @@
    "source": [
     "import numpy as np\n",
     "\n",
-    "def project_points(points: np.ndarray, K: np.ndarray, R: np.ndarray, T: np.ndarray) -> np.ndarray:\n",
+    "\n",
+    "def project_points(\n",
+    "    points: np.ndarray, K: np.ndarray, R: np.ndarray, T: np.ndarray\n",
+    ") -> np.ndarray:\n",
     "    \"\"\"\n",
     "    Projects 3D points onto a 2D plane using a given camera matrix, rotation matrix, and translation vector.\n",
     "\n",
@@ -141,16 +147,16 @@
     "    \"\"\"\n",
     "    # Convert points to homogeneous coordinates by adding a column of ones\n",
     "    points_homogeneous = np.hstack((points, np.ones((points.shape[0], 1))))\n",
-    "    \n",
+    "\n",
     "    # Compute the projection matrix by multiplying the intrinsic matrix with [R | T]\n",
     "    projection_matrix = K @ np.hstack((R, T.reshape(-1, 1)))\n",
-    "    \n",
+    "\n",
     "    # Project the 3D points to 2D by multiplying with the projection matrix\n",
     "    points_2d_homogeneous = points_homogeneous @ projection_matrix.T\n",
-    "    \n",
+    "\n",
     "    # Normalize by dividing by the last (homogeneous) coordinate\n",
     "    points_2d = points_2d_homogeneous[:, :2] / points_2d_homogeneous[:, 2, np.newaxis]\n",
-    "    \n",
+    "\n",
     "    return points_2d"
    ]
   },
@@ -171,11 +177,20 @@
     "import numpy as np\n",
     "import os\n",
     "import json\n",
-    "import random\n",
     "\n",
     "\n",
-    "# Function to generate 3D linear motion dataset\n",
-    "def generate_3d_linear_motion_dataset(num_frames, bg_img, output_dir):\n",
+    "def generate_3d_linear_motion_dataset(num_frames: int, bg_img: str, output_dir: str):\n",
+    "    \"\"\"\n",
+    "    Generates a dataset of 2D images simulating linear motion of a 3D object and saves annotations.\n",
+    "\n",
+    "    Args:\n",
+    "        num_frames (int): The number of frames to generate.\n",
+    "        bg_img (str): The path to the background image.\n",
+    "        output_dir (str): The directory where the generated frames and annotations will be saved.\n",
+    "\n",
+    "    Returns:\n",
+    "        None\n",
+    "    \"\"\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
     "    # Rotation (identity matrix, no rotation for simplicity)\n",
@@ -257,25 +272,41 @@
    "outputs": [],
    "source": [
     "def process_frame(\n",
-    "    frame_num,\n",
-    "    T_initial,\n",
-    "    base_size,\n",
-    "    bg_img,\n",
-    "    output_dir,\n",
-    "    z_min,\n",
-    "    z_max,\n",
-    "    frame_size,\n",
-    "    scale_factor,\n",
-    "):\n",
+    "    frame_num: int,\n",
+    "    T_initial: np.ndarray,\n",
+    "    base_size: int,\n",
+    "    bg_img: str,\n",
+    "    output_dir: str,\n",
+    "    z_min: int,\n",
+    "    z_max: int,\n",
+    "    frame_size: tuple,\n",
+    "    scale_factor: float,\n",
+    ") -> dict:\n",
+    "    \"\"\"\n",
+    "    Processes a single frame by projecting a 3D object into 2D space and drawing its bounding box on a background image.\n",
+    "\n",
+    "    Args:\n",
+    "        frame_num (int): The current frame number.\n",
+    "        T_initial (np.ndarray): The initial translation vector for the camera.\n",
+    "        base_size (int): The base size of the 2D bounding box.\n",
+    "        bg_img (str): Path to the background image.\n",
+    "        output_dir (str): Directory where the processed frame will be saved.\n",
+    "        z_min (int): Minimum Z-coordinate to keep the object within a valid depth range.\n",
+    "        z_max (int): Maximum Z-coordinate to keep the object within a valid depth range.\n",
+    "        frame_size (tuple): The size of the frame (width, height).\n",
+    "        scale_factor (float): Scaling factor for the object's motion.\n",
+    "\n",
+    "    Returns:\n",
+    "        dict: A dictionary containing the filename of the frame and the bounding box coordinates.\n",
+    "              The dictionary contains {'frame': frame_filename, 'bbox': [x, y, w, h]}.\n",
+    "              If an error occurs, the dictionary contains {'frame': None, 'bbox': []}.\n",
+    "    \"\"\"\n",
     "    try:\n",
     "        # Rotation (identity matrix, no rotation for simplicity)\n",
     "        R = np.eye(3)\n",
     "\n",
-    "        # Non-linear translation \n",
+    "        # Non-linear translation with trigonometric functions for more complex motion\n",
     "        t = frame_num * scale_factor\n",
-    "        \"\"\" T = T_initial + np.array(\n",
-    "            [100 * np.cos(t), 100 * np.sin(t), -frame_num * 3 * scale_factor]\n",
-    "        ) \"\"\"\n",
     "        T = T_initial + np.array(\n",
     "            [\n",
     "                100 * np.cos(t) + 50 * np.sin(2 * t),\n",
@@ -306,7 +337,7 @@
     "        size_scaling_factor = base_size / (z / 1000)\n",
     "        w = h = max(\n",
     "            1, int(size_scaling_factor)\n",
-    "        )  # Ensures that the width and height are at least 1\n",
+    "        )  # Ensures width and height are at least 1\n",
     "\n",
     "        # Calculates the 2D bounding box\n",
     "        bbox = (obj_2d_position[0] - w // 2, obj_2d_position[1] - h // 2, w, h)\n",
@@ -314,7 +345,7 @@
     "        # Draw the bounding box on the background\n",
     "        img = cv2.imread(bg_img)\n",
     "        if img is None:\n",
-    "            raise FileNotFoundError(f\"Image de fond {bg_img} non trouvée\")\n",
+    "            raise FileNotFoundError(f\"Background image {bg_img} not found\")\n",
     "        cv2.rectangle(\n",
     "            img,\n",
     "            (bbox[0], bbox[1]),\n",
@@ -330,7 +361,7 @@
     "\n",
     "        return {\"frame\": frame_filename, \"bbox\": [int(coord) for coord in bbox]}\n",
     "    except Exception as e:\n",
-    "        print(f\"Erreur lors du traitement de la frame {frame_num} : {e}\")\n",
+    "        print(f\"Error processing frame {frame_num}: {e}\")\n",
     "        return {\"frame\": None, \"bbox\": []}"
    ]
   },
@@ -341,19 +372,34 @@
    "outputs": [],
    "source": [
     "def generate_3d_nonlinear_motion_dataset(\n",
-    "    num_frames,\n",
-    "    bg_img,\n",
-    "    output_dir,\n",
-    "    z_min=100,\n",
-    "    z_max=1000,\n",
-    "    frame_size=(640, 480),\n",
-    "    scale_factor=0.01,\n",
+    "    num_frames: int,\n",
+    "    bg_img: str,\n",
+    "    output_dir: str,\n",
+    "    z_min: int = 100,\n",
+    "    z_max: int = 1000,\n",
+    "    frame_size: tuple = (640, 480),\n",
+    "    scale_factor: float = 0.01,\n",
     "):\n",
+    "    \"\"\"\n",
+    "    Generates a dataset of 3D nonlinear motion by projecting a 3D object into 2D space across multiple frames and saving the resulting images and annotations.\n",
+    "\n",
+    "    Args:\n",
+    "        num_frames (int): The total number of frames to generate.\n",
+    "        bg_img (str): The path to the background image to be used in the dataset.\n",
+    "        output_dir (str): The directory where the generated frames and annotations will be saved.\n",
+    "        z_min (int, optional): The minimum Z-coordinate value to ensure the object remains within a valid depth range. Defaults to 100.\n",
+    "        z_max (int, optional): The maximum Z-coordinate value to ensure the object remains within a valid depth range. Defaults to 1000.\n",
+    "        frame_size (tuple, optional): The size of the frame as (width, height). Defaults to (640, 480).\n",
+    "        scale_factor (float, optional): A scaling factor that controls the speed and complexity of the object's motion. Defaults to 0.01.\n",
+    "\n",
+    "    Returns:\n",
+    "        None: The function saves the generated frames and their corresponding annotations in the specified output directory.\n",
+    "    \"\"\"\n",
     "    os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "    #  Initial translation (initial distance from the camera)\n",
+    "    # Initial translation (initial distance from the camera)\n",
     "    T_initial = np.array([0, 0, z_max])\n",
-    "    base_size = 50  # Basic size of the bounding box when z = z_max\n",
+    "    base_size = 50  # Base size of the bounding box when z = z_max\n",
     "\n",
     "    # Processing each frame\n",
     "    annotations = []\n",
